force-app/main/default/objects/Agentforce_Integration__mdt/Agentforce_Integration__mdt.object-meta.xml
<CustomObject>
    <label>Agentforce Integration</label>
    <pluralLabel>Agentforce Integrations</pluralLabel>
</CustomObject>