force-app/main/default/objects/Agentforce_Integration__mdt/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>