force-app/main/default/objects/Agentforce_Integration__mdt/fields/Api_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Api_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>