force-app/main/default/objects/Agentforce_Integration__mdt/fields/Instance_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Instance_Endpoint__c</fullName>
    <label>Instance Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>